# redsun-simulator

./: .copier-answers.yml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: deploy-pypi.yaml  run-tests.yaml
src/redsun_simulator/: __init__.py  config.py  model.py
src/redsun_simulator/engine/bluesky/: _core.py  config.py  model.py
src/redsun_simulator/openwfs/: __init__.py  _config.py  _model.py
tests/: conftest.py  test_config.py  test_core.py  test_model.py
tests/data/: test_camera_config.yaml  test_config.yaml  test_motor_config.yaml
