[build-system]
requires = ["hatchling>=1.8.0", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "redsun-simulator"
dynamic = ["version"]
description = "Bundle of simulator plugins for RedSun"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
  { name = "Jacopo Abramo", email = "jacopo.abramo@gmail.com" },
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering"
]
requires-python = ">=3.9"
dependencies = [
    "sunflare"
]

[project.optional-dependencies]
openwfs = ["openwfs"]
dev = [
    "openwfs",
    "ruff",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "mypy"
]
docs = [
    "sphinx",
    "pydata-sphinx-theme",
    "myst-parser"
]

[tool.coverage.run]
source = ["redsun_simulator"]
omit = [
    "src/redsun_simulator/tests/conftest.py"
]

# https://coverage.readthedocs.io/en/latest/config.html
[tool.coverage.report]
exclude_lines = [
    "@abstractmethod",
    "if TYPE_CHECKING:",
    "@overload",
    "except ImportError",
    "except PackageNotFoundError",
    "raise NotImplementedError()",
]

[project.urls]
"Bug Tracker" = "https://github.com/redsun-acquisition/redsun-simulator/issues"
"Documentation" = "https://github.com/redsun-acquisition/redsun-simulator#README.md"
"Source Code" = "https://github.com/redsun-acquisition/redsun-simulator"
"User Support" = "https://github.com/redsun-acquisition/redsun-simulator/issues"

[project.entry-points]
[project.entry-points."redsun.plugins.models"]
openwfsmotor_config = "redsun_simulator.openwfs:OpenWFSMotorInfo"
openwfsmotor = "redsun_simulator.openwfs:OpenWFSMotor"

[tool.ruff]
target-version = "py39"
extend-exclude = ["docs", "tests"]

[tool.ruff.lint]
extend-select = ["D"]
ignore = [
    "D100", # https://docs.astral.sh/ruff/rules/undocumented-public-module/
    "D104", # https://docs.astral.sh/ruff/rules/undocumented-public-package/ 
    "D107", # https://docs.astral.sh/ruff/rules/undocumented-public-init/
]

[tool.mypy]
files = "src/**/*.py"
exclude = ["docs", "tests", "build"]
disable_error_code = ["import-untyped"]
pretty = true

[[tool.mypy.overrides]]
module = ["openwfs.*"]
ignore_missing_imports = true

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.sdist]
include = ["src", "tests"]

[tool.hatch.build.targets.wheel]
only-include = ["src"]
sources = ["src"]
